# lw-oop-4

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: devcontainer.json
include/: Array.hpp  Figure.hpp  Point.hpp  octagon.hpp  square.hpp  triangle.hpp
test/: tests.cpp
